<resources>
    <string name="app_name">游运通</string>
    <string name="homepage">首页</string>
    <string name="travel">订单</string>
    <string name="mine">我的</string>
    <string name="service">客服</string>
    <string name="location">定位中</string>
    <string name="searchTips">搜索直通车/景点/酒店/关键字</string>
    <string name="dialog_progress">加载中......</string>
    <string name="message">消息</string>
    <string name="message_service">客服消息</string>
    <string name="message_service_detail">暂无客服消息</string>
    <string name="message_order">订单服务</string>
    <string name="message_order_detail">你的三亚五日游已经完成</string>
    <string name="message_cheap">优惠活动</string>
    <string name="message_order_cheap">最新西安一日游</string>
    <string name="date">3月12日</string>
    <string name="testText">孤独的行者</string>
    <string name="all_order">全部订单</string>
    <string name="need_order">待支付</string>
    <string name="need_trip">待出行</string>
    <string name="need_say">待点评</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_collect">我的收藏</string>
    <string name="common_message">常用信息</string>
    <string name="my_trip">我的行程</string>
    <string name="hezuo">我要合作</string>
    <string name="cooperation">我要合作</string>
    <string name="cooperation_detail">供应商加盟代理合作</string>
    <string name="coupon_zhang">2张</string>
    <string name="coupon">优惠券</string>
    <string name="balance">余额</string>
    <string name="bank_card">银行卡</string>
    <string name="safe_setting">安全设置</string>
    <string name="bus_ticket">客车票</string>
    <string name="direct_train">直通车</string>
    <string name="date_small">4—21</string>
    <string name="query">查询</string>
    <string name="order_consult">订单咨询</string>
    <string name="product_consult">产品咨询</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consult">咨询</string>
    <string name="order_number">订单号：</string>
    <string name="number_demo">3132321313</string>
    <string name="zhengzhou">郑州</string>
    <string name="xian">西安</string>
    <string name="delete">删除</string>
    <string name="details">详情</string>
    <string name="register">注册</string>
    <string name="click_register">点击注册</string>
    <string name="phone_number">手机号:</string>
    <string name="send_code">发送验证码</string>
    <string name="insert_code">请输入验证码</string>
    <string name="insert_key">请输入6–16位字母和数字的组合</string>
    <string name="insert_key_twice">请再次输入密码</string>
    <string name="key_code">密码</string>
    <string name="logon">登录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="third_log_on">第三方登录</string>
    <string name="weiXin_log_on">微信登录</string>
    <string name="forget_key">忘记密码</string>
    <string name="title_activity_third_logon">ThirdLogonActivity</string>
    <string name="Bind_phone_number">绑定手机号</string>
    <string name="insert_phone">请输入手机号</string>
    <string name="tv_send_message">发送验证码</string>
    <string name="btn_bind_logon">绑定并登录</string>
    <string name="phone_num">手机号: </string>
    <string name="code">验证码</string>
    <string name="code_insert">输入验证码</string>
    <string name="identify_code">验证码: </string>
    <string name="new_pwd">新密码:  </string>
    <string name="new_pwd_insert">请输入6–16位字母和数字组合</string>
    <string name="ok">确认</string>
    <string name="find_pwd">找回密码</string>
    <string name="order_details">订单详情</string>

    <string name="already_cancel">已取消</string>
    <string name="deal_twice">再次预定</string>
    <string name="testText1">海南三亚+南山5日4晚游</string>
    <string name="money">￥958</string>
    <string name="Departure_time">出发时间：</string>
    <string name="tv_back_time">归来时间：</string>
    <string name="tv_back_time_details">2017–04–20</string>
    <string name="people_number">出游人数：</string>
    <string name="fly_ticket_info">   机票信息</string>
    <string name="shuXian">|</string>
    <string name="tv_back_city_details">郑州-三亚</string>
    <string name="tv_back_text_time">16:15</string>
    <string name="sanya">三亚机场</string>
    <string name="zhengzhoufly">新郑国际机场</string>
    <string name="fly_ticket_info_details">首都航空 | D7548 | 320 |  经济舱</string>
    <string name="order_info">订单详情</string>
    <string name="order_number_details">5697368489</string>
    <string name="pay_style">支付方式：</string>
    <string name="pay_style_details">余额</string>
    <string name="money_string">金额：</string>
    <string name="money_details">¥985</string>
    <string name="visitor_info">出游人信息</string>
    <string name="visitor_name">姓名：</string>
    <string name="visitor_name_details">李晓敏</string>
    <string name="card_number">身份证：</string>
    <string name="card_number_details">41000000000</string>
    <string name="visitor_phone">电话：</string>
    <string name="phone_details">13333333333</string>
    <string name="hot_pots">热门景点</string>
    <string name="popular_destination">热门目的地</string>
    <string name="ticket">门票</string>
    <string name="tip_name">景区的名称</string>
    <string name="tv_travel_time">出游时间：</string>
    <string name="order_information">订单信息</string>
    <string name="order_num">订单号：</string>
    <string name="pay_money">支付金额：</string>
    <string name="people_information">预订人信息</string>
    <string name="people_name">姓名：</string>
    <string name="people_name_details">西毒欧阳锋</string>
    <string name="travel_text">清明上河图</string>
    <string name="ZHouBianYou">周边游</string>
    <string name="guoneiyou">国内游</string>
    <string name="chuguoyou">出国游</string>
    <string name="history">浏览历史</string>
    <string name="personal_information">个人资料</string>
    <string name="log_off">退出登录</string>
    <string name="push_message">推送消息</string>
    <string name="pwd">密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
    <string name="open">开</string>
    <string name="off">关</string>
    <string name="personal_information_head">头像</string>
    <string name="personal_information_nickname">昵称</string>
    <string name="personal_information_name">姓名</string>
    <string name="personal_information_phone">电话</string>
    <string name="personal_information_id">身份证</string>
    <string name="personal_information_email">邮箱</string>
    <string name="personal_information_address">常住地</string>
    <string name="supplier">供应商</string>
    <string name="test">这是一个文字的测试，我也不知道写什么，就这样写了，反正到时候数据有可能是服务器返回的！！</string>
    <string name="connect_us">联系我们</string>
    <string name="distributor">分销商</string>
    <string name="advertise">广告</string>
    <string name="spot">景区</string>
    <string name="throughTrain">直通车</string>
    <string name="LogAndRegister">登录/注册</string>
    <string name="real_name">实名认证</string>
    <string name="ID">身份证号：</string>
    <string name="success">账户已实名认证成功</string>
    <string name="test_test">hanzhijie</string>
    <string name="tv_order_num">订单号：</string>
    <string name="tv_order_num_details">1111111111</string>
    <string name="btn_details">详情</string>
    <string name="nameOgTrip">周边游</string>
    <string name="nameOftest">郑州西安三日游</string>
    <string name="share">分享</string>
    <string name="camera">拍照</string>
    <string name="album">从相册中选</string>
    <string name="cancel">取消</string>
    <string name="new_pwd_again">确认密码:</string>
    <string name="insert_pwd">请输入密码</string>
    <string name="noSet">未设置</string>
    <string name="prompt_text">这是提示文字</string>
    <string name="save">保存</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="address_detail">详细地址</string>
    <string name="district">县/区</string>
    <string name="oldPhone">原手机号:</string>
    <string name="next">下一步</string>
    <string name="inputOldPhone">请输入原手机号</string>
    <string name="newPhone">新手机号:</string>
    <string name="old_pwd">原密码:</string>
    <string name="ok_modify">确认修改</string>
    <string name="AppAbout">游运通客户端</string>
    <string name="version">1.0.0</string>
    <string name="aboutApp">游运通介绍</string>
    <string name="feedback">意见反馈</string>
    <string name="checkForUpdata">检查更新</string>

    <string name="feedbackDetail">反馈详情</string>
    <string name="feedbackHint">\t\t\t\t欢迎你提出宝贵意见和建议，你留下的每一个字都将帮助我们改善产品。</string>
    <string name="submit">提交</string>
    <string name="location_trip">当地直通车</string>
    <string name="input_city_name">输入城市名称查询</string>
    <string name="prise">198</string>
    <string name="tv_register_toLogin">返回登录</string>
    <string name="one_people">1人</string>
    <string name="date2">2017–04–15</string>
    <string name="need_id">请输入身份证</string>
    <string name="yesterday">前一天</string>
    <string name="tomorrow">后一天</string>
    <string name="currentLocation">当前位置</string>
    <string name="startLocation">出发位置</string>
    <string name="search_history">历史记录</string>
    <string name="hotRecommend">热门推荐</string>

    <string name="qingMing">开封清明上河园</string>
    <string name="introduce">豪华大巴景区直达，一路畅通无阻！</string>
    <string name="qi">起</string>
    <string name="fromZZ">郑州出发</string>
    <string name="scenicIntroduce">三步一泉，五步一瀑，十步一潭</string>
    <string name="scenicName">云台山二日一晚跟团游</string>
    <string name="destine">下一步</string>
    <string name="collect">收藏</string>
    <string name="item_number">产品编号：</string>
    <string name="item_number_detail">DSLV00047859</string>
    <string name="fromLocation">出发地：</string>
    <string name="departureTime">出发日期</string>
    <string name="introduce_trip">行程介绍</string>
    <string name="wantShow">看了又看</string>
    <string name="pay_at_once">提交订单</string>
    <string name="total">总价:</string>
    <string name="go_of_time">出发时间：</string>
    <string name="fromLocations">出发地点</string>
    <string name="fromLocations2">出发地点：</string>
    <string name="orderPersonInformation">预订人信息</string>
    <string name="Visitor_info">出游人信息</string>
    <string name="common_visitor">添加游客</string>
    <string name="notice">预订须知</string>
    <string name="tv_insert_visitor">添加游客</string>
    <string name="name">姓名：</string>
    <string name="must_insert">必填</string>
    <string name="return_to_visitor">返回乘客列表</string>
    <string name="no_through_trip">对不起，当天暂未有直通车发出！</string>
    <string name="visitor_number">出行人数</string>
    <string name="jian">—</string>
    <string name="reduce">—</string>
    <string name="one">1</string>
    <string name="add">+</string>
    <string name="price">门票价格：</string>
    <string name="danjia">元/每人</string>
    <string name="tv_visitor_counter">出发人数：</string>
    <string name="startTime">出发时间：</string>
    <string name="payOnline">在线支付：</string>
    <string name="orderNumber">订单编号：</string>
    <string name="visitorNumber">出行人数：</string>
    <string name="collectNoDataHint">你暂时没有收藏你喜欢的产品呦！</string>
    <string name="look_look">去逛逛</string>
    <string name="no_internet_hint">网络连接异常，再试一下</string>
    <string name="close">关闭</string>
    <string name="tv_try_again">重试</string>
    <string name="payAtOnce">立即付款</string>
</resources>
