<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_order_bus_ticket"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_white_normal"
              android:orientation="vertical"
              android:padding="5dp">

    <RelativeLayout
        android:id="@+id/rv_first_bus_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/bus_ticket"
            android:textColor="@color/textColor"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:text="@string/order_number"
            android:textColor="@color/textColor"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/number_demo"
            android:textColor="@color/textColor"
            android:textSize="12sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tv_second_from_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_from_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhengzhou"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/tv_from_city"
            android:text="@string/xian"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/already_cancel"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tv_third_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_bus_ticket_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_small"/>

        <TextView
            android:id="@+id/tv_bus_ticket_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/delete"/>

    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:layout_marginTop="10dp"
        android:background="@color/gray11"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"

        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_bus_ticket_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:text="@string/need_trip"
            android:textColor="@color/blue_text"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/btn_bus_ticket_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_bus_ticket_state"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:background="@drawable/shape_order_details"
            android:gravity="center"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </RelativeLayout>

</LinearLayout>