<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="48dp"
          >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:background="#AAFFFFFF"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:weightSum="4">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/style_Radio_Button"
            android:checked="true"
            android:drawableTop="@drawable/selector_homepage"
            android:text="@string/homepage"/>

        <RadioButton
            android:id="@+id/rb_travel"
            style="@style/style_Radio_Button"
            android:drawableTop="@drawable/selector_travel"
            android:text="@string/travel"/>

        <RadioButton
            android:id="@+id/rb_service"
            style="@style/style_Radio_Button"
            android:drawableTop="@drawable/selector_service"
            android:text="@string/service"/>

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/style_Radio_Button"
            android:drawableTop="@drawable/selector_mine"
            android:text="@string/mine"/>
    </RadioGroup>


</FrameLayout>
